# trellis-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  lint.yml  live-infra.yml  openapi.yml  publish.yml  tests.yml  typecheck.yml
audit/: silent_fallbacks_2026-05-12-baseline.md  silent_fallbacks_2026-05-12-final-literal.md  silent_fallbacks_2026-05-12-final.md  silent_fallbacks_2026-05-13-phase8-final.md  silent_fallbacks_2026-05-14-c1-5-extraction-slice.md  silent_fallbacks_2026-05.md
deploy/: config.compose.yaml  init-db.sql  smoke.sh
docs/: PRD.md  ROADMAP-EDITS-2026-07-11.md
docs/agent-guide/: README.md  extractor-authoring.md  freshness-and-curation.md  modeling-guide.md  operations.md  pack-quality-evaluation.md  playbooks.md  program-convergence-eval.md  quickstart-query-agent.md  schemas.md  session-auto-capture.md  source-modeling-cookbook.md  surfaces.md  tagging-for-retrieval.md  testing.md  tiered-context-retrieval.md  trace-format.md
docs/api/: v1.yaml
docs/deployment/: aws-ecs.md  config.yaml.aws.example  local-compose.md  neo4j-auradb.md  neo4j-local.md  neo4j-self-hosted-cloud.md  recommended-config.yaml  runbook.md  scheduled-curation.md
docs/design/: adr-alias-resolution.md  adr-arcadedb-blessed-substrate.md  adr-autonomy-ladder.md  adr-canonical-graph-layer.md  adr-cli-exit-codes.md  adr-coding-agent-loop-cohort2-amendment.md  adr-coding-agent-loop.md  adr-column-leaf-modeling-guardrails.md  adr-corpus-ingestion.md  adr-deferred-cognition.md  adr-dogfooding-meta-traces.md  adr-dual-loop-advisory-restoration.md  adr-dual-loop-evolution.md  adr-egp-interop-bridge.md  adr-enterprise-graph-interop-bridge.md  adr-enterprise-ontology-capability-framing.md  adr-extraction-failure-telemetry.md  adr-extraction-mutation-core-boundary.md  adr-extraction-validation.md  adr-graph-ontology.md  adr-graph-shape-constraints.md  adr-graph-skill-harness.md  adr-importance-score-freshness.md  adr-inner-curation-loop.md  adr-llm-client-abstraction.md  adr-mcp-contract.md  adr-mcp-http-transport.md  adr-memory-layer-interop.md  adr-observation-entity-type.md  adr-ontology-profiles.md  adr-planes-and-substrates.md  adr-plugin-contract.md  adr-query-history-promotion.md  adr-rest-api-security-model.md  adr-setup-enforcement-model.md  adr-source-modeling-discipline.md  adr-tag-vocabulary-split.md  adr-terminology.md  adr-well-known-promotion-loop.md  architecture-design.md  (+28 more)
docs/getting-started/: README.md  integrate-your-agent.md  mcp-claude-code.md  mcp-claude-desktop.md  mcp-cursor.md  running-trellis.md  setup-decisions.md
docs/issues/: trellis-platform-integration-findings.md
docs/ops/: roadmap-driver-cloud-playbook.md
docs/plans/: 2026-03-16-entity-alias-implementation.md  2026-03-16-pack-observability-implementation.md  2026-04-16-phase2-step8-subtasks.md  2026-06-12-agent-integration-handoff.md  2026-06-16-session-handoff.md  2026-06-17-step3-assessment.md  2026-06-17-swarm-plan.md  2026-06-30-pilot-core-fixes.md  workflow-integration-hooks.md
docs/research/: client-layer-inventory.md  compaction-and-agent-patterns.md  memory-systems-landscape.md  workflow-engine-disposition.md
eval/: README.md  __init__.py  _backends.py  _live_wipe.py  _real_llm.py  arcadedb_spike.py  conftest.py  runner.py
eval/_smoke/: __init__.py  dbt_loader_smoke.py  dbt_phase_b1_smoke.py  github_loader_smoke.py  github_phase_b2_smoke.py  moonshot_probe.py  phase_a_smoke.py  trellis_clients_probe.py
eval/corpora/: __init__.py  dbt_loader.py
eval/datasets/: README.md
eval/generators/: README.md  __init__.py  graph_generator.py  trace_generator.py
eval/metrics/: __init__.py
eval/reports/: __init__.py  program_convergence_chart.py  report-20260617T034326_925972Z.json  report-20260617T034326_925972Z.md  report-20260702T075234_755651Z.json  report-20260702T075234_755651Z.md  report-20260710T181505_736320Z.json  report-20260710T181505_736320Z.md  report-20260710T181507_299341Z.json  report-20260710T181507_299341Z.md  report-20260710T181529_445700Z.json  report-20260710T181529_445700Z.md  report-20260710T181532_039775Z.json  report-20260710T181532_039775Z.md  report-20260710T181601_662413Z.json  report-20260710T181601_662413Z.md  report-20260710T181602_321153Z.json  report-20260710T181602_321153Z.md
eval/runs/: phase_a_2026-05-06_first_run.json  phase_b1_2026-05-07_baseline_no_graphsearch.json  phase_b1_2026-05-07_with_graphsearch.json  phase_b1_2026-05-07_with_graphsearch_canonical_dedup.json  phase_b2_2026-05-07_github_trellis.json  phase_b2_2026-05-07_github_trellis_baseline_no_graphsearch.json  (+5 more)
examples/: README.md  batch_ingest.sh  custom_classifier.py  custom_extractor.py  hooks_generic_workflow.py  langgraph_agent.py  mcp_claude_code.md  retrieve_before_task.py  sdk_local_demo.py  sdk_remote_demo.py
integrations/: __init__.py
scripts/: audit_silent_fallbacks.py  claude_postedit_lint.py  generate_openapi.py  load_eval_dataset_to_aura.py  seed_demo.py
skills/: README.md
tests/: conftest.py
(+729 files in other folders)
