[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trellis-ai"
dynamic = ["version"]
description = "Trellis — structured memory and learning for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nathan" },
]
keywords = ["ai", "agents", "knowledge-graph", "memory", "mcp", "traces", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "ulid-py>=1.1",
    "python-dateutil>=2.8",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
    "fastmcp>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/ronsse/trellis-ai"
Documentation = "https://github.com/ronsse/trellis-ai/tree/main/docs"
Repository = "https://github.com/ronsse/trellis-ai"
Issues = "https://github.com/ronsse/trellis-ai/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff==0.15.8",           # pinned: matches .pre-commit-config.yaml, avoids local/CI drift
    "mypy==1.20.0",           # pinned: matches .pre-commit-config.yaml
    "types-PyYAML>=6.0",
    "pre-commit>=4.0",
]
vectors = [
    "lancedb>=0.6",
    "pyarrow",
    "pandas",
    "numpy",
]
cloud = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "pgvector>=0.3",
    "boto3>=1.34",
]
llm-openai = [
    "openai>=1.0",
]
llm-anthropic = [
    "anthropic>=0.40",
]
neo4j = [
    "neo4j>=5.20",
]
all = [
    "trellis-ai[vectors,cloud,neo4j,llm-openai,llm-anthropic]",
]

[project.scripts]
trellis = "trellis_cli.main:app"
trellis-mcp = "trellis.mcp.server:main"
trellis-api = "trellis_api.app:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.2.0"

# Wheel + sdist are whitelist-only. Anything not listed below is excluded
# by construction — including the repo-root `eval/` harness, which is
# in-repo for iteration speed but never shipped to PyPI consumers. See
# docs/design/plan-evaluation-strategy.md §3-§4.
[tool.hatch.build.targets.wheel]
packages = ["src/trellis", "src/trellis_cli", "src/trellis_workers", "src/trellis_api", "src/trellis_sdk", "src/trellis_wire"]
artifacts = [
    "src/trellis/py.typed",
    "src/trellis_cli/py.typed",
    "src/trellis_sdk/py.typed",
    "src/trellis_api/py.typed",
    "src/trellis_workers/py.typed",
    "src/trellis_wire/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
    "/skills",
    "/scripts",
    "/Makefile",
    "/CHANGELOG.md",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/RELEASING.md",
    "/SECURITY.md",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "B", "W", "I", "N", "UP", "ANN", "S", "C4",
    "DTZ", "T10", "EM", "ISC", "ICN", "LOG", "G", "PIE", "PT",
    "RET", "SIM", "TCH", "ARG", "PTH", "ERA", "PL", "TRY",
    "FLY", "PERF", "FURB", "RUF",
]
ignore = [
    "ANN401",  # dynamically typed expressions (Any)
    "S101",    # use of assert (ok in tests)
    "PLR0913", # too many arguments
    "TC001",   # move import into TYPE_CHECKING block
    "TC003",   # move stdlib import into TYPE_CHECKING block
    "RUF022",  # __all__ not sorted
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "PLR2004", "ARG001", "ARG002", "ARG005", "PT011", "PLC0415"]
"src/trellis/stores/**/*.py" = ["S608", "S105"]  # parameterized SQL is safe; TOKEN_TRACKED is not a password
"src/trellis/stores/registry.py" = ["PLR0911", "PLR0912"]  # many early returns in LLM builders / backend branches
"src/trellis/mutate/executor.py" = ["PLR0911"]  # pipeline method has many return points
"src/trellis/mcp/**/*.py" = ["PLR0911"]  # many return paths in tool handlers
"src/trellis_api/**/*.py" = ["PLR0911"]  # routes may have many return paths

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "trellis._version",
    "numpy", "numpy.*",
    "lancedb", "lancedb.*",
    "pyarrow", "pyarrow.*",
    "psycopg", "psycopg.*",
    "pgvector", "pgvector.*",
    "boto3", "boto3.*",
    "botocore", "botocore.*",
    "fastmcp", "fastmcp.*",
    "fastapi", "fastapi.*",
    "openai", "openai.*",
    "anthropic", "anthropic.*",
    "neo4j", "neo4j.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["src", "."]
markers = [
    "postgres: requires a running Postgres instance (set TRELLIS_TEST_PG_DSN)",
    "neo4j: requires a running Neo4j instance (set TRELLIS_TEST_NEO4J_URI)",
]
